feat: return total wasted and average wasted when getting household waste
